Fix weird stretched donation +/- buttons on iOS

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -280,6 +280,7 @@
 
 			button.donation-up, button.donation-down {
 				position: absolute;
+				padding: 0;
 				border: 5px solid @donation-amt-fg;
 				border-radius: 50%;
 				background-color: transparent;
